res/css/views/messages/_MImageReplyBody.scss
/*
Copyright 2020 Tulir Asokan <tulir@maunium.net>

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

.mx_MImageReplyBody {
    display: grid;
    grid-template:
        "image sender"   20px
        "image filename" 20px
        / 44px  auto;
    grid-gap: 4px;
}

.mx_MImageReplyBody_thumbnail {
    grid-area: image;

    .mx_MImageBody_thumbnail_container {
        max-height: 44px !important;
    }
}

.mx_MImageReplyBody_sender {
    grid-area: sender;
}

.mx_MImageReplyBody_filename {
    grid-area: filename;
}

